updated the main template to add macros

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% import 'macros.html' as macro %}
 
 {% block content %}
 
@@ -6,31 +7,19 @@
     <div>
         <h2>INTERVIEW PITCHES</h2>
         <ul>
-            {% for interview in interviews %}
-            <li>{{interview.title}}</li>
-            <li>{{interview.pitch}}</li>
-            {% endfor %}
+            {{macro.displayPitchList(interviews)}}
         </ul>
         <h2>PICK-UP LINES PITCHES</h2>
         <ul>
-            {% for pickup in pickups %}
-            <li>{{pickup.title}}</li>
-            <li>{{pickup.pitch}}</li>
-            {% endfor %}
+            {{macro.displayPitchList(pickups)}}
         </ul>
         <h2>PRODUCT PITCHES</h2>
         <ul>
-            {% for product in products %}
-            <li>{{product.title}}</li>
-            <li>{{product.pitch}}</li>
-            {% endfor %}
+            {{macro.displayPitchList(products)}}
         </ul>
         <h2>PROMOTION PITCHES</h2>
         <ul>
-            {% for promotion in promotions %}
-            <li>{{promotion.title}}</li>
-            <li>{{promotion.pitch}}</li>
-            {% endfor %}
+            {{macro.displayPitchList(promotions)}}
         </ul>
     </div>
    
