--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -25,7 +25,7 @@
 <h4>Author</h4>
 <p>Posted by ~ {{comment.user.username}}</p>
 
-<p>{{comment.comments}}</p>
+<p>{{comment.comment}}</p>
 
 {% endfor %}
 
