added a link to the pitch form

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,6 +22,10 @@
             {{macro.displayPitchList(promotions)}}
         </ul>
     </div>
+
+    <div>
+        <a  href="/pitch"> Add Your own Pitch</a>
+    </div>
    
 </div>
 
