--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -2,8 +2,11 @@
 
 {% for pitch in pitch_list %}
 
-    <li><a href="/details/{{pitch.id}}">{{pitch.title}}</a></li>
+<div class="pitch">
+    <li class="buton"><a href="/details/{{pitch.id}}">{{pitch.title}}</a></li>
     <li>Posted by ~ {{pitch.user.username}}</li>
+</div>
+    
 
 {% endfor %}
 
