--- a/app/templates/details.html
+++ b/app/templates/details.html
@@ -1,18 +1,26 @@
 {% extends 'base.html' %}
 {% import 'macros.html' as macro %}
 
+{% block styles%}
+    {{ super() }}
+    <link rel="stylesheet" href="{{url_for('static',filename='css/styles.css')}}">
+{% endblock %}
+
 {% block content %} 
 
 <div class="container">
     {{macro.displayPitches(pitch)}}
-</div>
+
 
 <h2>Comments</h2>
 {% if comments %}
         {{macro.displayComments(comments)}}
 {% else %} 
-        <h3>This pitch has no comments</h3>
+        <p class="lead">This pitch has no comments</p>
 {% endif %}
-        <a  href="/details/comments/{{pitch[0].id}}"> Post a new comment</a>
+
+<button class="btn btn-success"><a class="link" href="/details/comments/{{pitch[0].id}}"> Post a new comment</a></button>
+        
 
 {% endblock %}
+</div>
