--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -44,7 +44,7 @@
         </div>
     </div>
     
-    <button class="btn btn-primary"><a id="link" href="/pitch"> Add Your own Pitch</a></button>
+    <button class="btn btn-primary"><a class="link" href="/pitch"> Add Your own Pitch</a></button>
         
     
    
