--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -1,5 +1,10 @@
 {% extends 'base.html'%}
 
+{% block styles%}
+    {{ super() }}
+    <link rel="stylesheet" href="{{url_for('static',filename='css/styles.css')}}">
+{% endblock %}
+
 {% block content %}
 <div class="container">
 <div class="row">
@@ -30,7 +35,7 @@
     <form  action="{{url_for('main.update_pic',uname=user.username)}}" method="post" enctype = "multipart/form-data">
 
       <input type="file"  name="photo" class="form-control" required>
-      <input type="submit">
+      <input type="submit" class="submit">
     </form>
       {% endif %}
   </div>
