added css custom styling to the buttons

--- a/app/templates/details.html
+++ b/app/templates/details.html
@@ -19,7 +19,7 @@
         <p class="lead">This pitch has no comments</p>
 {% endif %}
 
-<button class="btn btn-success"><a class="link" href="/details/comments/{{pitch[0].id}}"> Post a new comment</a></button>
+<a class="btn btn-success" href="/details/comments/{{pitch[0].id}}"> Post a new comment</a>
         
 
 {% endblock %}
