added a new paragraph

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -43,6 +43,7 @@
             </ul>
         </div>
     </div>
+    <p class="lead" id="note">NOTE: You must Register to Create a new Pitch</p>
     
     <a class="btn btn-primary" href="/pitch"> Add Your own Pitch</a>
         
