deployment to heroku

--- a/app/templates/details.html
+++ b/app/templates/details.html
@@ -18,7 +18,7 @@
 {% else %} 
         <p class="lead">This pitch has no comments</p>
 {% endif %}
-
+<p class="lead" id="note">NOTE: You must Register to Comment</p>
 <a class="btn btn-success" href="/details/comments/{{pitch[0].id}}"> Post a new comment</a>
         
 
